cleaned up linter errors

--- a/gene-josh/index.html
+++ b/gene-josh/index.html
@@ -32,7 +32,7 @@
     </section>
     <div class="icon-menu"></div>
     <nav class="main-nav">
-      <!-- TODO: Add a hamburger menu icon here, which will ultimately show/hide depending on screen width (desktop vs. mobile). -->
+      <!-- TOD: Add a hamburger menu icon here, which will ultimately show/hide depending on screen width (desktop vs. mobile). -->
 
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
